--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,12 @@ jobs:
     steps:
     - name: Check git repo
       uses: actions/checkout@v3
+      
+    - name: version
+      run: >-
+        echo "::set-output name=VERSION::$(
+        cat version
+        )"
 
     - name: login to dockerhub
       uses: docker/login-action@v2
@@ -30,4 +36,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: pnilab/ctp-signature:latest
+        tags: pnilab/ctp-signature:latest, pnilab/ctp-signature:${{ steps.nodejs.outputs.NODE_VERSION }}
+        
+        
+        
